--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
+    "libphonenumber-js": "^1.12.34",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
