feat: add Swiper for similar items carousel; enhance product gallery and info layout; update navbar with mobile support

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.0",
     "react-hot-toast": "^2.6.0",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
